--- a/Shop-S-V/MainWindow.xaml
+++ b/Shop-S-V/MainWindow.xaml
@@ -7,13 +7,21 @@
         mc:Ignorable="d"
         Title="MainWindow" Height="350" Width="525">
     <Grid>
-        <Button Content="Lisa Toode" HorizontalAlignment="Left" Margin="12,8,0,0" VerticalAlignment="Top" Width="75" Click="Button_Click"/>
-        <TextBox HorizontalAlignment="Left" Height="30" Margin="99,72,0,0" TextWrapping="Wrap" Text="" VerticalAlignment="Top" Width="66" Visibility="Hidden"/>
-        <TextBox HorizontalAlignment="Left" Height="30" Margin="176,72,0,0" TextWrapping="Wrap" Text="" VerticalAlignment="Top" Width="66" Visibility="Hidden"/>
-        <TextBox HorizontalAlignment="Left" Height="30" Margin="252,72,0,0" TextWrapping="Wrap" Text="" VerticalAlignment="Top" Width="66" Visibility="Hidden"/>
-        <Label Content="Toote nimi" HorizontalAlignment="Left" Margin="100,47,0,0" VerticalAlignment="Top" Height="28" Width="67" Visibility="Hidden"/>
-        <Label Content="hind" HorizontalAlignment="Left" Margin="177,47,0,0" VerticalAlignment="Top" Height="28" Width="54" Visibility="Hidden"/>
-        <Label Content="kogus" HorizontalAlignment="Left" Margin="254,47,0,0" VerticalAlignment="Top" Height="32" Width="59" Visibility="Hidden"/>
+        <Grid.RowDefinitions>
+            <RowDefinition Height="244*"/>
+            <RowDefinition Height="75*"/>
+        </Grid.RowDefinitions>
+        <Button Content="Lisa Toode" HorizontalAlignment="Left" Margin="126,26,0,0" VerticalAlignment="Top" Width="102" Click="Button_Click" x:Name="Lisa" Height="56"/>
+        <TextBox HorizontalAlignment="Left" Height="30" Margin="99,72,0,0" TextWrapping="Wrap" Text="" VerticalAlignment="Top" Width="66" Visibility="Hidden" x:Name="textbox1"/>
+        <TextBox HorizontalAlignment="Left" Height="30" Margin="176,72,0,0" TextWrapping="Wrap" Text="" VerticalAlignment="Top" Width="66" Visibility="Hidden" x:Name="textbox2"/>
+        <TextBox HorizontalAlignment="Left" Height="30" Margin="252,72,0,0" TextWrapping="Wrap" Text="" VerticalAlignment="Top" Width="66" Visibility="Hidden" x:Name="textbox3"/>
+        <Label  Content="Toote nimi" HorizontalAlignment="Left" Margin="100,47,0,0" VerticalAlignment="Top" Height="28" Width="67" Visibility="Hidden" x:Name="Toode"/>
+        <Label  Content="hind" HorizontalAlignment="Left" Margin="177,47,0,0" VerticalAlignment="Top" Height="28" Width="54" Visibility="Hidden" x:Name="Hind"/>
+        <Label  Content="kogus" HorizontalAlignment="Left" Margin="254,47,0,0" VerticalAlignment="Top" Height="32" Width="59" Visibility="Visible" x:Name="Kogus"/>
+        <Button Content="Kassa" HorizontalAlignment="Left" Margin="285,25,0,0" VerticalAlignment="Top" Width="102" Click="Button_Click_Kassa" Height="56" x:Name="Kassa" Visibility="Visible">
+        </Button>
+        <Button Content="Lisa" HorizontalAlignment="Left" Margin="330,67,0,0" VerticalAlignment="Top" Width="66" Height="40" Click="Button_Click_1" x:Name="Lisa_Toode" Visibility="Hidden"/>
+        <Button Content="R" HorizontalAlignment="Left" Margin="0,52,0,1" Width="15" RenderTransformOrigin="-0.188,3.909" Click="Restart" Grid.Row="1"/>
 
     </Grid>
 </Window>
