--- a/Shop-S-V/MainWindow.xaml
+++ b/Shop-S-V/MainWindow.xaml
@@ -7,18 +7,22 @@
         mc:Ignorable="d"
         Title="MainWindow" Height="350" Width="525">
     <Grid>
-        <ListBox Name="ProductListBox" HorizontalAlignment="Left" Height="299" Margin="10,10,0,0" VerticalAlignment="Top" Width="497" SelectionChanged="ListBox_SelectionChanged">
+        <ListBox Name="ProductListBox">
             <ListBox.ItemTemplate>
                 <DataTemplate>
                     <Grid Margin="0,2">
                         <Grid.ColumnDefinitions>
                             <ColumnDefinition Width="150"/>
+                            <ColumnDefinition Width="100"/>
+                            <ColumnDefinition Width="100"/>
                         </Grid.ColumnDefinitions>
-                        <TextBlock Grid.Column="0" Height="100" TextWrapping="Wrap"  Width="100" Text="{Binding Nimi}"/>
+                        <TextBlock Grid.Column="0" Text="{Binding Nimi}"/>
+                        <TextBlock Grid.Column="1" Text="{Binding Hind}"/>
+                        <TextBlock Grid.Column="2" Text="{Binding Kogus}"/>
+
                     </Grid>
                 </DataTemplate>
             </ListBox.ItemTemplate>
-            <ListBox Height="100" Width="100"/>
         </ListBox>
         <Grid.RowDefinitions>
             <RowDefinition Height="134*"/>
