--- a/Shop-S-V/MainWindow.xaml
+++ b/Shop-S-V/MainWindow.xaml
@@ -18,10 +18,10 @@
         <!--#endregion-->
 
         <!--#region Lisa Toode-->
-        <TextBox HorizontalAlignment="Left" Height="30" Margin="99,72,0,0" TextWrapping="Wrap" Text="" VerticalAlignment="Top" Width="66" Visibility="Visible" x:Name="textbox1"/>
-        <TextBox HorizontalAlignment="Left" Height="30" Margin="176,72,0,0" TextWrapping="Wrap" VerticalAlignment="Top" Width="66" Visibility="Visible" x:Name="textbox2"/>
-        <Label  Content="Toote nimi" HorizontalAlignment="Left" Margin="100,47,0,0" VerticalAlignment="Top" Height="28" Width="67" Visibility="Hidden" x:Name="Toode"/>
-        <Label  Content="Hind(€)" HorizontalAlignment="Left" Margin="177,47,0,0" VerticalAlignment="Top" Height="28" Width="54" Visibility="Hidden" x:Name="Hind"/>
+        <TextBox HorizontalAlignment="Left" Height="30" Margin="153,70,0,0" TextWrapping="Wrap" Text="" VerticalAlignment="Top" Width="66" Visibility="Visible" x:Name="textbox1"/>
+        <TextBox HorizontalAlignment="Left" Height="30" Margin="230,70,0,0" TextWrapping="Wrap" VerticalAlignment="Top" Width="66" Visibility="Visible" x:Name="textbox2"/>
+        <Label  Content="Toote nimi" HorizontalAlignment="Left" Margin="154,45,0,0" VerticalAlignment="Top" Height="28" Width="67" Visibility="Visible" x:Name="Toode"/>
+        <Label  Content="Hind(€)" HorizontalAlignment="Left" Margin="231,45,0,0" VerticalAlignment="Top" Height="28" Width="54" Visibility="Visible" x:Name="Hind"/>
         <Button Content="Lisa" HorizontalAlignment="Left" Margin="330,67,0,0" VerticalAlignment="Top" Width="66" Height="40" Click="Button_Click_LisaToode" x:Name="Lisa_Toode" Visibility="Visible"/>
         <!--#endregion-->
 
@@ -38,10 +38,10 @@
         <!--#region Tooted-->
         <Label Content="Tooted" HorizontalAlignment="Left" Margin="10,10,0,0" VerticalAlignment="Top" x:Name="Tooted" Height="34" Width="110" FontSize="20" FontWeight="Bold" Visibility="Hidden"/>
         <Label HorizontalAlignment="Left" Margin="0,38,0,0" VerticalAlignment="Top" Content="Toode" Width="57" Name="Label_Toode" Height="26" Visibility="Visible"/>
-        <Label Content="Hind(€)" HorizontalAlignment="Left" Margin="104,38,0,0" VerticalAlignment="Top" Width="63" Name="Label_Hind" Height="30" Visibility="Visible" RenderTransformOrigin="0.895,0.14"/>
+        <Label Content="Hind(€)" HorizontalAlignment="Left" Margin="104,38,0,0" VerticalAlignment="Top" Width="63" Name="Label_Hind" Height="30" Visibility="Hidden" RenderTransformOrigin="0.895,0.14"/>
         <Button Content="Lisage Ostukorvi" HorizontalAlignment="Left" Margin="2,264,0,0" VerticalAlignment="Top" Width="148" Height="34" FontSize="14" FontWeight="Bold" x:Name="LisageOstukorvi" Click="Button_LisaOstukorvi_Click" RenderTransformOrigin="0.498,0.263"/>
 
-        <ListBox HorizontalAlignment="Left" Height="195" VerticalAlignment="Top" Width="184" Margin="2,64,0,0" Name="ToodeListBox" Visibility="Visible">
+        <ListBox HorizontalAlignment="Left" Height="195" VerticalAlignment="Top" Width="184" Margin="2,64,0,0" Name="ToodeListBox" Visibility="Hidden">
             <ListBox.ItemTemplate>
                 <DataTemplate>
                     <Grid Margin="0,2">
@@ -65,7 +65,7 @@
         <Label Content="Hind(€)" HorizontalAlignment="Left" Margin="370,38,0,0" VerticalAlignment="Top" Width="63" x:Name="LabelOstukorvHind" Height="30" Visibility="Visible" RenderTransformOrigin="0.895,0.14"/>
         <Label Content="Kogus" HorizontalAlignment="Left" Margin="459,38,0,0" VerticalAlignment="Top" Width="48" Name="LabelOstukorvKogus" Height="30" Visibility="Visible"/>
         <Button Content="Arvutage summa" HorizontalAlignment="Left" Margin="359,263,0,0" VerticalAlignment="Top" Width="148" Height="34" FontSize="14" FontWeight="Bold" Name="Button_Summa" Click="Button_Summa_Click" RenderTransformOrigin="0.323,0.533"/>
-        <ListBox HorizontalAlignment="Left" Height="195" VerticalAlignment="Top" Width="240" Margin="267,63,0,0" x:Name="OstukorvListBox" Visibility="Visible">
+        <ListBox HorizontalAlignment="Left" Height="195" VerticalAlignment="Top" Width="240" Margin="267,63,0,0" x:Name="OstukorvListBox" Visibility="Hidden">
             <ListBox.ItemTemplate>
                 <DataTemplate>
                     <Grid Margin="0,2">
